--- a/conflict_neg.bib
+++ b/conflict_neg.bib
@@ -431,3 +431,19 @@
 	month = feb,
 	year = {2024},
 }
+
+@misc{umng_reglamento_2021-1,
+	title = {Reglamento general estudiantil de pregrado: {Versión} compilatoria},
+	publisher = {Universidad Militar Nueva Granada},
+	author = {UMNG},
+	year = {2021},
+}
+
+@book{inigo_college_203,
+	title = {College {Mathematics} for {Everyday} {Life}},
+	url = {https://math.libretexts.org/@go/page/31955},
+	publisher = {Coconino Community College},
+	author = {Inigo, Maxie and Jennifer, Jameson and Kathryn, Kozak and Maya, Lanzetta and Kim, Sonier},
+	month = mar,
+	year = {203},
+}
