--- a/006_commu.qmd
+++ b/006_commu.qmd
@@ -15,9 +15,9 @@ format:
     toc: true
     slide-level: 2
     section-titles: false
-    keep-tex: true
     include-in-header:
       file: 000_tex_files/preamble.tex
+    classoption: ['notheorems']
 header-includes: 
 -   \titlegraphic{\includegraphics[width=3cm]{000_logos/logo-blue-vertical}}
 fig-cap-location: bottom
@@ -124,17 +124,25 @@ tibble(Group  = c("A", "B", "C"),
 
 ##
 
+```{r}
+#| include: false
+
+low_score <- 37
+medium_score <- 42
+high_score <- 50
+```
+
 -   Grades
 
     -   **Case 1**: **A** and **B** work together but **C** is excluded.
 
-        -   **C** obtains a grade of **35** out of 50.
-        -   The grade of **A** and **B** will depend on who gets the most of the **118 points**. The **Group** that gets the most points will have a grade of **50** out of **50** and the other **Group** gets a grade of **40** out of **50**. If **A** and **B** divide the points equally, whoever gets the highest grade will be assigned randomly.
+        -   **C** obtains a grade of **`{r} low_score `** out of 50.
+        -   The grade of **A** and **B** will depend on who gets the most of the **118 points**. The **Group** that gets the most points will have a grade of **`{r} high_score `** out of **50** and the other **Group** gets a grade of **`{r} medium_score `** out of **50**. If **A** and **B** divide the points equally, whoever gets the highest grade will be assigned randomly.
 
     -   **Case 2**: **A** and **C** work together but **B** is excluded.
 
-        -   **B** obtains a grade of **35** out of 50.
-        -   The grade of **A** and **C** will depend on who gets the most of the **84 points**. The **Group** that gets the most points will have a grade of **50** out of 50 and the other **Group** gets a grade of **40** out of 50. If **A** and **C** divide the points equally, whoever gets the highest grade will be assigned randomly.
+        -   **B** obtains a grade of **`{r} low_score `** out of 50.
+        -   The grade of **A** and **C** will depend on who gets the most of the **84 points**. The **Group** that gets the most points will have a grade of **`{r} high_score `** out of 50 and the other **Group** gets a grade of **`{r} medium_score `** out of 50. If **A** and **C** divide the points equally, whoever gets the highest grade will be assigned randomly.
 
 ##
 
@@ -142,12 +150,12 @@ tibble(Group  = c("A", "B", "C"),
 
     -   **Case 3**: **B** and **C** work together but **A** is excluded.
 
-        -   **A** obtains a grade of **35** out of 50.
-        -   The grade of **B** and **C** will depend on who gets the most of the **50 points**. The **Group** that gets the most points will have a grade of **50** out of 50 and the other **Group** gets a grade of **40** out of 50. If **B** and **C** divide the points equally, whoever gets the highest grade will be assigned randomly.
+        -   **A** obtains a grade of **`{r} low_score `** out of 50.
+        -   The grade of **B** and **C** will depend on who gets the most of the **50 points**. The **Group** that gets the most points will have a grade of **`{r} high_score `** out of 50 and the other **Group** gets a grade of **`{r} medium_score `** out of 50. If **B** and **C** divide the points equally, whoever gets the highest grade will be assigned randomly.
 
     -   **Case 4**: **A**, **B** and **C** work together so nobody is excluded.
 
-        -   The **Group** that obtains the highest amount of points will have a grade of **50** out of 50, the **Group** that obtains the second highest amount of points obtains a grade of **40** out of 50 and the **Group** that obtains the lowest amount of points obtains a grade of **35** out of 50. In case of a tie between any of the **Groups**, the one who obtains the highest grade, the second highest grade or the lowest grade will be assigned randomly depending on whether there is a tie between 2 or 3 **Groups**.
+        -   The **Group** that obtains the highest amount of points will have a grade of **`{r} high_score `** out of 50, the **Group** that obtains the second highest amount of points obtains a grade of **`{r} medium_score `** out of 50 and the **Group** that obtains the lowest amount of points obtains a grade of **`{r} low_score `** out of 50. In case of a tie between any of the **Groups**, the one who obtains the highest grade, the second highest grade or the lowest grade will be assigned randomly depending on whether there is a tie between 2 or 3 **Groups**.
 
 ##
 
@@ -172,14 +180,65 @@ tibble(Group  = c("A", "B", "C"),
 
         -   Once the negotiation is over, which should last a maximum of 20 minutes, inform the professor of the final result: Was an agreement reached? What was the agreement?
 
+##
+
+- How the grades where chosen?
+
+::: {#def-fair-game}
+
+## Fair game
+
+A game that has an expected value of zero is called a **fair game**. [@inigo_college_203, sec. 3.4.2]
+
+:::
+
+##
+
+For example an **american roulette wheel** with double zero is not a fair game.
+
+![American roulette](000_images/003_roulette.jpg){#fig-american-roulette width="150px" height="150px"}
+
+In an american roulette with this characteristics we have the numbers from $0$ to $36$ plus $00$.
+
+##
+
+- Assume the american roulette is balanced, where all 38 outcomes are equally likely, and suppose you bet on a single number. 
+
+    - Also note that in casinos, if the number you bet on is hit, the winner must be paid $35$ times their bet.
+    
+- Suppose you bet $1000$ on a number. In that case, the expected value is:
+
+$$(1000 * 35) * (1 / 38) + (-1000) * (37 / 38) \approx -52.63$$
+Where:
+
+- $(1000 * 35) * (1 / 38)$ is the expected value of the winnings.
+- Otherwise, you must transfer $1000$ to the casino (hence the negative value), with a probability of occurrence of $37/38$
+
+In this sense, in the long run, your net gain is negative on average, approximately $-52.63$. So this is not a fair game.
+
+## 
+
+::: {#def-fair-game-umng}
+
+## Fair game in the sense of this class 
+
+A game that has an expected value of 43 is called a **fair game** in this class. This value corresponds to the minimum score necessary to obtain **Matrícula de Honor** according to [@umng_reglamento_2021-1, art. 95]
+
+:::
+
+I assume that each student is equally capable to obtain a score of $37$, $42$ or $50$ and that you can reach an agreement.
+
+Then the conditional expected value assuming that you can reach an agreement is:
+
+$$37 * (1 / 3) + 42 * (1 / 3) + 50 * (1 / 3) = 43$$
 # What Is Communicated during Negotiation?
 
 ##
 
 ```{dot}
 //| label: fig-elements-communicated-in-a-negotiation
-//| fig-cap: Elements communicated during a negotiation [@lewicki_negociacion_2024, p 216]
-//| fig-width: 4.5
+//| fig-cap: Elements communicated during a negotiation [@lewicki_negociacion_2024, p. 216]
+//| fig-width: 4
 //| fig-height: 2.5
 
 digraph boxes_and_circles {
@@ -246,7 +305,7 @@ digraph boxes_and_circles {
 
 ```{dot}
 //| label: fig-aspect-on-how-people-communicate-in-negotiation
-//| fig-cap: Aspects on how people communicate in negotiation [@lewicki_negociacion_2024, pp 221-227]
+//| fig-cap: Aspects on how people communicate in negotiation [@lewicki_negociacion_2024, pp. 221-227]
 //| fig-width: 4.5
 //| fig-height: 2.5
 
@@ -306,7 +365,7 @@ digraph boxes_and_circles {
 
 ```{dot}
 //| label: fig-improving-communication-in-negotiation
-//| fig-cap: Improving communication in negotition [@lewicki_negociacion_2024, pp 230-234][^2]
+//| fig-cap: Improving communication in negotition [@lewicki_negociacion_2024, pp. 230-234][^2]
 //| fig-width: 4.5
 //| fig-height: 2.5
 
