updating session 1 chapter 1 using revealjs

--- a/conflict_neg.bib
+++ b/conflict_neg.bib
@@ -1,104 +1,39 @@
 
-@article{adler_negotiating_2007,
-	title = {Negotiating with liars},
-	volume = {48},
-	language = {English},
-	number = {4},
-	journal = {MIT Sloan Management Review},
-	author = {Adler, Robert S.},
-	year = {2007},
-	pages = {69--79},
+@book{inigo_college_203,
+	title = {College {Mathematics} for {Everyday} {Life}},
+	url = {https://math.libretexts.org/@go/page/31955},
+	publisher = {Coconino Community College},
+	author = {Inigo, Maxie and Jennifer, Jameson and Kathryn, Kozak and Maya, Lanzetta and Kim, Sonier},
+	month = mar,
+	year = {203},
 }
 
-@article{lewicki_ethical_1998,
-	title = {Ethical and {Unethical} {Bargaining} {Tactics}: {An} {Empirical} {Study}},
-	volume = {18},
-	issn = {01674544},
-	url = {http://link.springer.com/10.1023/A:1005719122519},
-	doi = {10.1023/A:1005719122519},
-	number = {2},
-	urldate = {2020-10-31},
-	journal = {Journal of Business Ethics},
-	author = {Lewicki, Roy J. and Robinson, Robert J.},
-	year = {1998},
-	pages = {211--228},
+@misc{umng_reglamento_2021,
+	title = {Reglamento general estudiantil de pregrado: {Versión} compilatoria},
+	publisher = {Universidad Militar Nueva Granada},
+	author = {UMNG},
+	year = {2021},
 }
 
-@book{rogers_active_2015,
-	title = {Active listening},
-	isbn = {978-1-61427-872-6},
-	language = {English},
-	publisher = {Martino Publishing},
-	author = {Rogers, Carl R and Farson, Richard Evans},
-	year = {2015},
-	note = {OCLC: 1050955193},
-}
-
-@incollection{coleman_power_2014,
-	edition = {3},
-	title = {Power and {Conflict}},
-	isbn = {978-1-118-81032-3},
-	language = {English},
-	booktitle = {The {Handbook} of {Conflict} {Resolution}: {Theory} and {Practice}},
-	publisher = {Jossey-Bass},
-	author = {Coleman, Peter T.},
-	year = {2014},
-	pages = {137--181},
-}
-
-@misc{pon_staff_negotiation_2020,
-	title = {Negotiation {Skills} for {Win}-{Win} {Negotiations}},
-	url = {https://www.pon.harvard.edu/daily/negotiation-skills-daily/listening-skills-for-maximum-success/},
-	language = {English},
-	urldate = {2020-10-27},
-	journal = {PON - Program on Negotiation at Harvard Law School},
-	author = {{PON Staff}},
-	month = oct,
-	year = {2020},
-	note = {Section: Negotiation Skills},
-	file = {Snapshot:C\:\\Users\\Usuario\\Zotero\\storage\\3M9E4SD3\\listening-skills-for-maximum-success.html:text/html},
-}
-
-@misc{program_on_negotiation_negotiation_2014,
-	title = {Negotiation {Role}-{Play}: {Three}-{Party} {Coalition} {Exercise} - {Game} {Theory} \& {Negotiation} {Analytics}},
-	shorttitle = {Negotiation {Role}-{Play}},
-	url = {https://www.youtube.com/watch?v=oaOv_iXOvtY},
-	urldate = {2021-04-05},
-	author = {{Program on Negotiation}},
-	month = sep,
-	year = {2014},
-}
-
-@article{dimara_task-based_2020,
-	title = {A {Task}-{Based} {Taxonomy} of {Cognitive} {Biases} for {Information} {Visualization}},
-	volume = {26},
-	issn = {1077-2626, 1941-0506, 2160-9306},
-	url = {https://ieeexplore.ieee.org/document/8476234/},
-	doi = {10.1109/TVCG.2018.2872577},
-	number = {2},
-	urldate = {2020-10-21},
-	journal = {IEEE Transactions on Visualization and Computer Graphics},
-	author = {Dimara, Evanthia and Franconeri, Steven and Plaisant, Catherine and Bezerianos, Anastasia and Dragicevic, Pierre},
+@misc{mcadoo_how_2024,
+	title = {How to cite {ChatGPT}},
+	url = {https://apastyle.apa.org/blog/how-to-cite-chatgpt},
+	language = {en},
+	urldate = {2025-01-14},
+	journal = {APA Style Blog},
+	author = {McAdoo, Timothy},
 	month = feb,
-	year = {2020},
-	pages = {1413--1432},
-	file = {Submitted Version:C\:\\Users\\Usuario\\Zotero\\storage\\7TRG3UHX\\Dimara et al. - 2020 - A Task-Based Taxonomy of Cognitive Biases for Info.pdf:application/pdf},
+	year = {2024},
 }
 
-@article{simonson_choice_1992,
-	title = {Choice in {Context}: {Tradeoff} {Contrast} and {Extremeness} {Aversion}},
-	volume = {29},
-	issn = {00222437},
-	shorttitle = {Choice in {Context}},
-	url = {https://www.jstor.org/stable/3172740?origin=crossref},
-	doi = {10.2307/3172740},
-	number = {3},
-	urldate = {2020-10-21},
-	journal = {Journal of Marketing Research},
-	author = {Simonson, Itamar and Tversky, Amos},
-	month = aug,
-	year = {1992},
-	pages = {281},
+@misc{equipo_proyecto_ia-uniandes_lineamientos_2024,
+	title = {Lineamientos para el uso de inteligencia artificial generativa ({IAG}) en la {Universidad} de los {Andes}},
+	url = {https://secretariageneral.uniandes.edu.co/images/documents/lineamientos-uso-inteligencia-artificial-generativa-IAG-uniandes.pdf},
+	language = {es},
+	urldate = {2025-04-14},
+	author = {Equipo proyecto IA-Uniandes},
+	month = oct,
+	year = {2024},
 }
 
 @article{leonardelli_multiple_2019,
@@ -176,6 +111,7 @@
 	author = {Goffman, Erving},
 	year = {1986},
 	keywords = {Social interaction, Social psychology},
+	annote = {Reprint. Originally published: New York : Harper \& Row, 1974},
 }
 
 @book{bateson_steps_2000,
@@ -186,7 +122,8 @@
 	publisher = {University of Chicago Press},
 	author = {Bateson, Gregory},
 	year = {2000},
-	keywords = {Anthropology, Evolution, Knowledge, Theory of, Psychiatry},
+	keywords = {Knowledge, Theory of, Anthropology, Evolution, Psychiatry},
+	annote = {Originally published: San Francisco : Chandler Pub. Co., 1972. With new foreword},
 }
 
 @book{luckiesh_visual_2017,
@@ -261,7 +198,7 @@
 	pages = {6--11},
 }
 
-@misc{program_on_negotiation_negotiation_2014-1,
+@misc{program_on_negotiation_negotiation_2014,
 	title = {Negotiation {Role}-{Play}: {Three}-{Party} {Coalition} {Exercise} - {Game} {Theory} \& {Negotiation} {Analytics}},
 	shorttitle = {Negotiation {Role}-{Play}},
 	url = {https://www.youtube.com/watch?v=O2d6XuDm-ok&feature=emb_title},
@@ -312,74 +249,117 @@
 	pages = {8},
 }
 
-@misc{magic_markers_como_2018,
-	title = {¿{Cómo} negociar bien?},
-	url = {https://youtu.be/CnF26cfIfQM},
-	language = {Spanish},
-	urldate = {2020-09-23},
-	author = {{Magic Markers}},
-	year = {2018},
-}
-
-@book{lewicki_negociacion_2024,
-	edition = {9},
-	title = {Negociación},
-	isbn = {978-607-15-2295-5},
-	url = {https://www-ebooks7-24-com.ezproxy.umng.edu.co/?il=40562},
-	publisher = {McGraw-Hill Education},
-	author = {Lewicki, Roy J. and Barry, Bruce and Saunders, David M.},
-	year = {2024},
-	keywords = {Negotiation in business, Negotiation},
-}
-
-@misc{maechler_cluster_2022,
-	title = {cluster: {Cluster} {Analysis} {Basics} and {Extensions}},
-	url = {https://CRAN.R-project.org/package=cluster},
-	author = {Maechler, Martin and Rousseeuw, Peter and Struyf, Anja and Hubert, Mia and Hornik, Kurt},
-	year = {2022},
-}
-
-@techreport{iregui_guerrero_politica_2018,
-	title = {Política de formación para la investigación, la innovación y el emprendimiento},
-	url = {https://revistas.unimilitar.edu.co/index.php/wpapers/article/view/3750},
-	urldate = {2024-06-18},
-	institution = {Universidad Militar Nueva Granada},
-	author = {Iregui Guerrero, Marcela and Cuevas Silva, Juan María},
-	year = {2018},
-	doi = {10.18359/whitepaper.3750},
-	file = {Full Text:C\:\\Users\\Usuario\\Zotero\\storage\\HQMJHVH6\\Iregui Guerrero and Cuevas Silva - 2018 - Política de formación para la investigación, la in.pdf:application/pdf},
-}
-
-@misc{umng_reglamento_2021,
-	title = {Reglamento {General} {Estudiantil} de {Pregrado}: {Acuerdo} 02 de 2015 actualizado, conforme a los {Acuerdos} 01 de 2017, 05 de 2018 y 04 de 2020, que lo modifican parcialmente},
-	publisher = {Universidad Militar Nueva Granada},
-	author = {Umng},
-	month = aug,
-	year = {2021},
-}
-
-@article{greenhalgh_smr_1986,
-	title = {{SMR} {Forum}: {Managing} {Conflict}},
-	volume = {27},
-	language = {en-US},
+@article{adler_negotiating_2007,
+	title = {Negotiating with liars},
+	volume = {48},
+	language = {English},
 	number = {4},
-	journal = {Sloan Management Review},
-	author = {Greenhalgh, Leonard},
-	year = {1986},
-	pages = {45--51},
+	journal = {MIT Sloan Management Review},
+	author = {Adler, Robert S.},
+	year = {2007},
+	pages = {69--79},
 }
 
-@book{pruitt_social_2004,
-	address = {Boston},
-	edition = {3rd ed},
-	series = {{McGraw}-{Hill} series in social psychology},
-	title = {Social conflict: escalation, stalemate, and settlement},
-	isbn = {978-0-07-285535-7},
-	shorttitle = {Social conflict},
-	publisher = {McGraw-Hill},
-	author = {Pruitt, Dean G. and Kim, Sung Hee and Rubin, Jeffrey Z.},
-	year = {2004},
-	keywords = {Interpersonal conflict, Problem solving, Psychological aspects, Social conflict},
+@article{lewicki_ethical_1998,
+	title = {Ethical and {Unethical} {Bargaining} {Tactics}: {An} {Empirical} {Study}},
+	volume = {18},
+	issn = {01674544},
+	url = {http://link.springer.com/10.1023/A:1005719122519},
+	doi = {10.1023/A:1005719122519},
+	number = {2},
+	urldate = {2020-10-31},
+	journal = {Journal of Business Ethics},
+	author = {Lewicki, Roy J. and Robinson, Robert J.},
+	year = {1998},
+	pages = {211--228},
+}
+
+@book{rogers_active_2015,
+	title = {Active listening},
+	isbn = {978-1-61427-872-6},
+	language = {English},
+	publisher = {Martino Publishing},
+	author = {Rogers, Carl R and Farson, Richard Evans},
+	year = {2015},
+	note = {OCLC: 1050955193},
+}
+
+@incollection{coleman_power_2014,
+	edition = {3},
+	title = {Power and {Conflict}},
+	isbn = {978-1-118-81032-3},
+	language = {English},
+	booktitle = {The {Handbook} of {Conflict} {Resolution}: {Theory} and {Practice}},
+	publisher = {Jossey-Bass},
+	author = {Coleman, Peter T.},
+	year = {2014},
+	pages = {137--181},
+}
+
+@misc{pon_staff_negotiation_2020,
+	title = {Negotiation {Skills} for {Win}-{Win} {Negotiations}},
+	url = {https://www.pon.harvard.edu/daily/negotiation-skills-daily/listening-skills-for-maximum-success/},
+	language = {English},
+	urldate = {2020-10-27},
+	journal = {PON - Program on Negotiation at Harvard Law School},
+	author = {{PON Staff}},
+	month = oct,
+	year = {2020},
+	note = {Section: Negotiation Skills},
+	file = {Snapshot:C\:\\Users\\Usuario\\Zotero\\storage\\3M9E4SD3\\listening-skills-for-maximum-success.html:text/html},
+}
+
+@article{dimara_task-based_2020,
+	title = {A {Task}-{Based} {Taxonomy} of {Cognitive} {Biases} for {Information} {Visualization}},
+	volume = {26},
+	issn = {1077-2626, 1941-0506, 2160-9306},
+	url = {https://ieeexplore.ieee.org/document/8476234/},
+	doi = {10.1109/TVCG.2018.2872577},
+	number = {2},
+	urldate = {2020-10-21},
+	journal = {IEEE Transactions on Visualization and Computer Graphics},
+	author = {Dimara, Evanthia and Franconeri, Steven and Plaisant, Catherine and Bezerianos, Anastasia and Dragicevic, Pierre},
+	month = feb,
+	year = {2020},
+	pages = {1413--1432},
+	file = {Submitted Version:C\:\\Users\\Usuario\\Zotero\\storage\\7TRG3UHX\\Dimara et al. - 2020 - A Task-Based Taxonomy of Cognitive Biases for Info.pdf:application/pdf},
+}
+
+@article{simonson_choice_1992,
+	title = {Choice in {Context}: {Tradeoff} {Contrast} and {Extremeness} {Aversion}},
+	volume = {29},
+	issn = {00222437},
+	shorttitle = {Choice in {Context}},
+	url = {https://www.jstor.org/stable/3172740?origin=crossref},
+	doi = {10.2307/3172740},
+	number = {3},
+	urldate = {2020-10-21},
+	journal = {Journal of Marketing Research},
+	author = {Simonson, Itamar and Tversky, Amos},
+	month = aug,
+	year = {1992},
+	pages = {281},
+}
+
+@misc{program_on_negotiation_negotiation_2014-1,
+	title = {Negotiation {Role}-{Play}: {Three}-{Party} {Coalition} {Exercise} - {Game} {Theory} \& {Negotiation} {Analytics}},
+	shorttitle = {Negotiation {Role}-{Play}},
+	url = {https://www.youtube.com/watch?v=oaOv_iXOvtY},
+	urldate = {2021-04-05},
+	author = {{Program on Negotiation}},
+	month = sep,
+	year = {2014},
+}
+
+@book{greenhalgh_managing_2001,
+	address = {New York},
+	title = {Managing strategic relationships: the key to business success},
+	isbn = {978-0-684-86769-4},
+	shorttitle = {Managing strategic relationships},
+	publisher = {Free Press},
+	author = {Greenhalgh, Leonard},
+	year = {2001},
+	keywords = {Business networks, Decision making, Strategic alliances (Business), Success in business},
 }
 
 @article{curhan_what_2006,
@@ -400,50 +380,97 @@
 	file = {Submitted Version:C\:\\Users\\Usuario\\Zotero\\storage\\KD9QUYLQ\\Curhan et al. - 2006 - What do people value when they negotiate Mapping .pdf:application/pdf},
 }
 
-@book{greenhalgh_managing_2001,
-	address = {New York},
-	title = {Managing strategic relationships: the key to business success},
-	isbn = {978-0-684-86769-4},
-	shorttitle = {Managing strategic relationships},
-	publisher = {Free Press},
+@book{pruitt_social_2004,
+	address = {Boston},
+	edition = {3rd ed},
+	series = {{McGraw}-{Hill} series in social psychology},
+	title = {Social conflict: escalation, stalemate, and settlement},
+	isbn = {978-0-07-285535-7},
+	shorttitle = {Social conflict},
+	publisher = {McGraw-Hill},
+	author = {Pruitt, Dean G. and Kim, Sung Hee and Rubin, Jeffrey Z.},
+	year = {2004},
+	keywords = {Interpersonal conflict, Problem solving, Psychological aspects, Social conflict},
+	annote = {Rev. ed. of: Social conflict / Jeffrey Z. Rubin, Dean G. Pruitt, Sung Hee Kim. 2nd ed. c1994},
+}
+
+@article{greenhalgh_smr_1986,
+	title = {{SMR} {Forum}: {Managing} {Conflict}},
+	volume = {27},
+	language = {en-US},
+	number = {4},
+	journal = {Sloan Management Review},
 	author = {Greenhalgh, Leonard},
-	year = {2001},
-	keywords = {Business networks, Decision making, Strategic alliances (Business), Success in business},
+	year = {1986},
+	pages = {45--51},
 }
 
-@misc{equipo_proyecto_ia-uniandes_lineamientos_2024,
-	title = {Lineamientos para el uso de inteligencia artificial generativa ({IAG}) en la {Universidad} de los {Andes}},
-	url = {https://secretariageneral.uniandes.edu.co/images/documents/lineamientos-uso-inteligencia-artificial-generativa-IAG-uniandes.pdf},
-	language = {es},
-	urldate = {2025-04-14},
-	author = {Equipo proyecto IA-Uniandes},
-	month = oct,
+@book{lewicki_negociacion_2024,
+	edition = {9},
+	title = {Negociación},
+	isbn = {978-607-15-2295-5},
+	url = {https://www-ebooks7-24-com.ezproxy.umng.edu.co/?il=40562},
+	publisher = {McGraw-Hill Education},
+	author = {Lewicki, Roy J. and Barry, Bruce and Saunders, David M.},
 	year = {2024},
-}
-
-@misc{mcadoo_how_2024,
-	title = {How to cite {ChatGPT}},
-	url = {https://apastyle.apa.org/blog/how-to-cite-chatgpt},
-	language = {en},
-	urldate = {2025-01-14},
-	journal = {APA Style Blog},
-	author = {McAdoo, Timothy},
-	month = feb,
-	year = {2024},
+	keywords = {Negotiation in business, Negotiation},
 }
 
 @misc{umng_reglamento_2021-1,
-	title = {Reglamento general estudiantil de pregrado: {Versión} compilatoria},
+	title = {Reglamento {General} {Estudiantil} de {Pregrado}: {Acuerdo} 02 de 2015 actualizado, conforme a los {Acuerdos} 01 de 2017, 05 de 2018 y 04 de 2020, que lo modifican parcialmente},
 	publisher = {Universidad Militar Nueva Granada},
-	author = {UMNG},
+	author = {Umng},
+	month = aug,
 	year = {2021},
 }
 
-@book{inigo_college_203,
-	title = {College {Mathematics} for {Everyday} {Life}},
-	url = {https://math.libretexts.org/@go/page/31955},
-	publisher = {Coconino Community College},
-	author = {Inigo, Maxie and Jennifer, Jameson and Kathryn, Kozak and Maya, Lanzetta and Kim, Sonier},
-	month = mar,
-	year = {203},
+@techreport{iregui_guerrero_politica_2018,
+	title = {Política de formación para la investigación, la innovación y el emprendimiento},
+	url = {https://revistas.unimilitar.edu.co/index.php/wpapers/article/view/3750},
+	urldate = {2024-06-18},
+	institution = {Universidad Militar Nueva Granada},
+	author = {Iregui Guerrero, Marcela and Cuevas Silva, Juan María},
+	year = {2018},
+	doi = {10.18359/whitepaper.3750},
+	file = {Full Text:C\:\\Users\\Usuario\\Zotero\\storage\\HQMJHVH6\\Iregui Guerrero and Cuevas Silva - 2018 - Política de formación para la investigación, la in.pdf:application/pdf},
+}
+
+@misc{magic_markers_como_2018,
+	title = {¿{Cómo} negociar bien?},
+	url = {https://youtu.be/CnF26cfIfQM},
+	language = {Spanish},
+	urldate = {2020-09-23},
+	author = {{Magic Markers}},
+	year = {2018},
+}
+
+@misc{maechler_cluster_2022,
+	title = {cluster: {Cluster} {Analysis} {Basics} and {Extensions}},
+	url = {https://CRAN.R-project.org/package=cluster},
+	author = {Maechler, Martin and Rousseeuw, Peter and Struyf, Anja and Hubert, Mia and Hornik, Kurt},
+	year = {2022},
+}
+
+@book{openstax_featured_principles_2019,
+	address = {Houston},
+	edition = {1},
+	title = {Principles of management},
+	isbn = {978-0-9986257-6-8 978-0-9986257-7-5},
+	url = {https://openstax.org/details/books/principles-management},
+	abstract = {Principles of Management is designed to meet the scope and sequence requirements of the introductory course on management. This is a traditional approach to management using the leading, planning, organizing, and controlling approach. Management is a broad business discipline, and the Principles of Management course covers many management areas such as human resource management and strategic management, as well as behavioral areas such as motivation. No one individual can be an expert in all areas of management, so an additional benefit of this text is that specialists in a variety of areas have authored individual chapters},
+	language = {eng},
+	publisher = {OpenStax},
+	author = {OpenStax Featured},
+	year = {2019},
+}
+
+@book{mintzberg_mintzberg_1989,
+	address = {New York},
+	title = {Mintzberg on management: inside our strange world of organizations},
+	isbn = {978-0-02-921371-1},
+	shorttitle = {Mintzberg on management},
+	language = {eng},
+	publisher = {Collier Macmillan},
+	author = {Mintzberg, Henry},
+	year = {1989},
 }
